# eraser

./: README.md  icon.indd
src/: CMakeLists.txt
src/app/: dirtask.cpp  dirtask.h  errordialog.cpp  errordialog.h  filetask.cpp  filetask.h  frame.cpp  frame.h  generator.h  icon.xpm  main.cpp  main.h  resource.rc  storeddata.h  task.cpp  task.h  updateprogressdata.h
src/lib/: lib.cpp  lib.h  standards.h
